--- a/Furnicome/public/index.html
+++ b/Furnicome/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <!-- Required meta tags -->
@@ -103,7 +103,7 @@
     <!-- Background image -->
     <div class="p-5  bg-image" style="
   background-image: url('../recursos/pindex.png');
-  height: 700px;
+  height: 400px;
 ">
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
         <div class="d-flex justify-content-center align-items-center h-100">
@@ -126,7 +126,7 @@
       <div class="row">
         <div class="col order-last">
           <div class="card" style="width: 20rem; background-color: #FBF6F2;">
-            <img src="../recursos/icono3.jpg" class="card-img-top" alt="..." id="bordeimgindex">
+            <img src="../recursos/iconos/icono3.jpg" class="card-img-top" alt="Cocina" id="bordeimgindex">
             <div class="card-body">
               <a href="">
                 <h5 class="card-title">Cocina</h5>
@@ -136,7 +136,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 20rem; background-color: #FBF6F2;">
-            <img src="../recursos/icono2.jpg" class="card-img-top" alt="..." id="bordeimgindex">
+            <img src="../recursos/iconos/icono2.jpg" class="card-img-top" alt="Sala" id="bordeimgindex">
             <div class="card-body">
               <a href="../public/products.html">
                 <h5 class="card-title">Sala</h5>
@@ -146,7 +146,7 @@
         </div>
         <div class="col order-first">
           <div class="card" style="width: 20rem; background-color: #FBF6F2;">
-            <img src="../recursos/icono1.jpg" class="card-img-top" alt="..." id="bordeimgindex">
+            <img src="../recursos/iconos/icono1.jpg" class="card-img-top" alt="..." id="bordeimgindex">
             <div class="card-body">
               <a href="">
                 <h5 class="card-title">Dormitorio</h5>
@@ -178,28 +178,22 @@
           <div class="carousel-inner rounded-5 shadow-4-strong">
             <!-- Single item -->
             <div class="carousel-item active">
-              <img src="../recursos/slide1.jpg" class="d-block w-100" alt="Sunset Over the City" />
+              <img src="../recursos/carrusel/slide1.jpg" class="d-block w-100" alt="Sunset Over the City" />
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
               </div>
             </div>
 
             <!-- Single item -->
             <div class="carousel-item">
-              <img src="../recursos/slide2.jpg" class="d-block w-100" alt="Canyon at Nigh" />
+              <img src="../recursos/carrusel/slide2.jpg" class="d-block w-100" alt="Canyon at Nigh" />
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
 
             <!-- Single item -->
             <div class="carousel-item">
-              <img src="../recursos/slide3.jpg" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
+              <img src="../recursos/carrusel/slide3.jpg" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
               </div>
             </div>
           </div>
