--- a/Furnicome/public/sign_up.html
+++ b/Furnicome/public/sign_up.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -98,35 +98,35 @@
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/user.png" alt="" width="16px" height="16px">
+                            <img src="../recursos/iconos/user.png" alt="" width="16px" height="16px">
                             <input type="text" placeholder="Nombre" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/user.png" alt="" width="16px" height="16px">
+                            <img src="../recursos/iconos/user.png" alt="" width="16px" height="16px">
                             <input type="text" placeholder="Apellido" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/id.png" alt="" width="20px" height="20px">
+                            <img src="../recursos/iconos/id.png" alt="" width="20px" height="20px">
                             <input type="text" placeholder="DUI" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/lock.png" alt="" width="13px" height="16px">
+                            <img src="../recursos/iconos/lock.png" alt="" width="13px" height="16px">
                             <input type="text" placeholder="Clave" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/confirmar.png" alt="" width="16px" height="16px">
+                            <img src="../recursos/iconos/confirmar.png" alt="" width="16px" height="16px">
                             <input type="text" placeholder="Confirmar clave" required>
                         </div>
                     </label>
@@ -136,14 +136,14 @@
                     <label for="" class="label2">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/correo.png" alt="" width="16px" height="16px">
+                            <img src="../recursos/iconos/correo.png" alt="" width="16px" height="16px">
                             <input class="largo" type="text" placeholder="Correo" required>
                         </div>
                     </label>
                     <label for="" class="label2">
                         <div class="input-box">
 
-                            <img src="../recursos/direccion.png" alt="" width="16px" height="16px">
+                            <img src="../recursos/iconos/direccion.png" alt="" width="16px" height="16px">
                             <input class="largo" type="text" placeholder="Dirección" required>
                         </div>
                     </label>
