--- a/Furnicome/private/index.html
+++ b/Furnicome/private/index.html
@@ -13,25 +13,90 @@
 </head>
 
 <body class="D1">
-    <div>
-        <form id="login-container">
+    <div class="hide" id="login-container-div">
+        <form method="post" id="login-container">
             <div>
                 <h1 class="title">Private Login</h1>
             </div>
             <label for="usuario" id="labelfont">
                 <img src="../recursos/iconos/user.png" width="15" height="15" alt="">
-                <input placeholder="Usuario" type="text" id="username">
+                <input placeholder="Usuario" type="text" id="username" class="validate" required>
             </label>
             <label for="contraseña">
                 <img src="../recursos/iconos/lock.png" width="15" height="15" alt="">
-                <input placeholder="Contraseña" type="password" id="password">
+                <input placeholder="Contraseña" type="password" id="password" class="validate" required>
             </label>
-            <button type="submit"><a> Iniciar sesión </a></button>
-
+            <a href="">
+                <button class="button tooltipped" input type="submit" value="Registrar" data-tooltip="Ingresar">iniciar
+                    sesión</button>
+            </a>
             <a href="#" class="link">¿Olvidaste tu contraseña?</a>
-            <a href="#" class="link">¿No tienes cuenta? Resgistrate aquí</a>
         </form>
     </div>
-</body>
+    <!-- Contenedor del formulario para registrar el primer usuario del sitio privado -->
+    <div class="hide" id="signup-container">
+        <form action="#" id="signup-form">
+            <div class="user-detail">
+                <label for="">
+                    <div class="input-box">
+                        <span class="details"></span>
+                        <img src="../recursos/iconos/user.png" alt="" width="16px" height="16px">
+                        <input type="text" placeholder="Nombre" required class="validate">
+                    </div>
+                </label>
+                <label for="">
+                    <div class="input-box">
+                        <span class="details"></span>
+                        <img src="../recursos/iconos/user.png" alt="" width="16px" height="16px">
+                        <input type="text" placeholder="Apellido" required class="validate">
+                    </div>
+                </label>
+                <label for="" class="label2">
+                    <div class="input-box">
 
+                        <img src="../recursos/iconos/user.png" alt="" width="16px" height="16px">
+                        <input class="largo" type="text" placeholder="Alias" required class="validate">
+                    </div>
+                    <label for="">
+                        <div class="input-box">
+                            <span class="details"></span>
+                            <img src="../recursos/iconos/lock.png" alt="" width="13px" height="16px">
+                            <input type="text" placeholder="Clave" required class="validate">
+                        </div>
+                    </label>
+                    <label for="">
+                        <div class="input-box">
+                            <span class="details"></span>
+                            <img src="../recursos/iconos/confirmar.png" alt="" width="16px" height="16px">
+                            <input type="text" placeholder="Confirmar clave" required class="validate">
+                        </div>
+                    </label>
+            </div>
+            <div class="user-detail2">
+                <label for="" class="label2">
+                    <div class="input-box">
+                        <span class="details"></span>
+                        <img src="../recursos/iconos/correo.png" alt="" width="16px" height="16px">
+                        <input class="largo" type="text" placeholder="Correo" required class="validate">
+                    </div>
+                </label>
+                </label>
+                <div class="form-check">
+                    <label class="form-check-label" for="flexCheckDefault">Acepto terminos y condiciones</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                </div>
+                <div class="button" id="button">
+                    <a href="">
+                        <button class="button tooltipped" input type="submit" data-tooltip="Guardar">Registrar</button>
+                    </a>
+                </div>
+            </div>
+        </form>
+    </div>
+    <script type="text/javascript" src="../recursos/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../controllers/components.js"></script>
+    <script></script>
+    <script type="text/javascript" src="../controllers/dashboard/index.js"></script>
+    <script type="text/javascript" src="../controllers/dashboard/account.js"></script>
+</body>
 </html>
